--- a/index.html
+++ b/index.html
@@ -17,18 +17,45 @@
         <section id="container">
 
             <article class="cartao">
-            <div class="cartao_conteudo"></div>
-            <h3>Programação</h3>
-            <div class="cartao_conteudo_pergunta">O que é Javascript?</div>
-            <div class="cartao_conteudo_resposta">O Javascript é uma linguagem de programação.</div>
+                <div class="cartao-conteudo">
+                <h3>PROGRAMAÇÃO</h3>
+                <div class="cartao-conteudo-pergunta"> <p>O que é Javascript?</p> </div>
+                <div class="cartao-conteudo-resposta"> <p>O Javascript é uma linguagem de programação.</p> </div>
+                </div>
             </article>
 
             <article class="cartao">
-                <div class="cartao_conteudo"></div>
-                <h3>Programação</h3>
-                <div class="cartao_conteudo_pergunta">O que é CSS?</div>
-                <div class="cartao_conteudo_resposta">O CSS é um linguagem de estilização.</div>
+                <div class="cartao-conteudo">
+                <h3>GEOGRAFIA</h3>
+                <div class="cartao-conteudo-pergunta"> <p>Qual é a capital de França?</p> </div>
+                <div class="cartao-conteudo-resposta"> <p>A capital da França Paris</p> </div>
+                </div>
+            </article>
+
+                <article class="cartao">
+                    <div class="cartao-conteudo">
+                    <h3>PROGRAMAÇÃO 2.0</h3>
+                    <div class="cartao-conteudo-pergunta"> <p>O que é CSS?</p> </div>
+                    <div class="cartao-conteudo-resposta"> <p>O CSS é um linguagem de estilização.</p> </div>
+                    </div>
                 </article>
+
+                <article class="cartao">
+                    <div class="cartao-conteudo">
+                    <h3>PROGRAMAÇÃO</h3>
+                    <div class="cartao-conteudo-pergunta"> <p>O que é CSS?</p> </div>
+                    <div class="cartao-conteudo-resposta"> <p>O CSS é um linguagem de estilização.</p> </div>
+                    </div>
+                </article>
+
+                <article class="cartao">
+                    <div class="cartao-conteudo">
+                    <h3>PROGRAMAÇÃO</h3>
+                    <div class="cartao-conteudo-pergunta"> <p>O que é CSS?</p> </div>
+                    <div class="cartao-conteudo-resposta"> <p>O CSS é um linguagem de estilização.</p> </div>
+                    </div>
+                </article>
+        
 
         </section>
 
