--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -24,39 +24,6 @@
                 </div>
             </article>
 
-            <article class="cartao">
-                <div class="cartao-conteudo">
-                <h3>GEOGRAFIA</h3>
-                <div class="cartao-conteudo-pergunta"> <p>Qual é a capital de França?</p> </div>
-                <div class="cartao-conteudo-resposta"> <p>A capital da França Paris</p> </div>
-                </div>
-            </article>
-
-                <article class="cartao">
-                    <div class="cartao-conteudo">
-                    <h3>PROGRAMAÇÃO 2.0</h3>
-                    <div class="cartao-conteudo-pergunta"> <p>O que é CSS?</p> </div>
-                    <div class="cartao-conteudo-resposta"> <p>O CSS é um linguagem de estilização.</p> </div>
-                    </div>
-                </article>
-
-                <article class="cartao">
-                    <div class="cartao-conteudo">
-                    <h3>PROGRAMAÇÃO</h3>
-                    <div class="cartao-conteudo-pergunta"> <p>O que é CSS?</p> </div>
-                    <div class="cartao-conteudo-resposta"> <p>O CSS é um linguagem de estilização.</p> </div>
-                    </div>
-                </article>
-
-                <article class="cartao">
-                    <div class="cartao-conteudo">
-                    <h3>PROGRAMAÇÃO</h3>
-                    <div class="cartao-conteudo-pergunta"> <p>O que é CSS?</p> </div>
-                    <div class="cartao-conteudo-resposta"> <p>O CSS é um linguagem de estilização.</p> </div>
-                    </div>
-                </article>
-        
-
         </section>
 
     </main>
@@ -64,6 +31,9 @@
     <footer>
         <p>Projeto desenvolvdo pela Alura, sem fins lucrativos</p>
     </footer>
+
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 
 </body>
 
