--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
     <main>
         <section id="container">
-
+<!-- 
             <article class="cartao">
                 <div class="cartao-conteudo">
                 <h3>PROGRAMAÇÃO</h3>
                 <div class="cartao-conteudo-pergunta"> <p>O que é Javascript?</p> </div>
                 <div class="cartao-conteudo-resposta"> <p>O Javascript é uma linguagem de programação.</p> </div>
                 </div>
-            </article>
+            </article> -->
 
         </section>
 
