--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p>Projeto desenvolvdo pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvdo pelo Amilcar, sem fins lucrativos, é claro.</p>
     </footer>
 
     <script src="app.js"></script>
